# hpco

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cc  reduce_sum.cu  report2.nsys-rep  report2.sqlite  verify.py
benches/: CMakeLists.txt  reduce_bench.cu
benchmarks/: CMakeLists.txt  reduce_bench.cu
cmake/: CPM.cmake
csrc/: README.md
csrc/cpu/: binary_ops_cpu.cc  binary_ops_cpu.h  gemm_cpu.h  reduce_ops_cpu.h  statistical_algo.cc  statistical_algo.h  unary_ops_cpu.cc  unary_ops_cpu.h
csrc/cuda/: CMakeLists.txt  ops.h  stat_algo.cu
csrc/cuda/reduce/: reduce_kernel.cuh
csrc/cuda/unary/: elu.cu  unary_operators.cuh  unary_ops.cuh
device/: CMakeLists.txt
device/include/: common.h  cutlass_common.h  reduce_kernel.cuh
device/src/: cute_layout_sample.cu  reduce.cu
docs/: ai-infra.typ
examples/: K.txt  Q.txt  V.txt  flashattention.cc  flashattention.py  layer_norm_test.py  self_attention_test.py  torch_flashattention.py
examples/attention/: Cargo.toml
examples/attention/src/: main.rs
host/: CMakeLists.txt
host/include/: host_ops.h  statistical_algo.h  unary_ops.h
host/src/: gemm.cc  statistical_algo.cc  unary_ops.cc  vector_add_with_cpu.cc
hpco/: ops.py
hpco/csrc/: README.md  muladd.cpp  op_bindings.cc  op_kernels.h
hpco/csrc/cpu/: CMakeLists.txt  attention.cc  attention.h  binary_ops_cpu.cc  embedding_cpu.cc  embedding_cpu.h  gemm_cpu.cc  reduce_ops_cpu.cc  reduce_ops_cpu.h  rms_norm_cpu.cc  softmax.cc  softmax.h  statistical_algo.cc  unary_ops_cpu.cc  unary_ops_cpu.h
hpco/csrc/cuda/: CMakeLists.txt  common.h  cuda_kernels.cuh  cute_layout_sample.cu  embedding.cu  gemm.cu  kernels.cuh  muladd.cu  norm.cu  ops.h  random.cu  rms_norm.cu  sampler.cu  softmax.cu
hpco/csrc/cuda/binary/: binary_ops.cuh  vector_add.cu
hpco/csrc/cuda/reduce/: reduce_kernel.cuh  reduce_kernels.cu  reduce_sum_kernel.cu
hpco/csrc/cuda/unary/: unary.cu  unary_ops.cuh
hpco/csrc/cute/: elementwise_add.cu  unary_add_cute.cu
hpco/tests/: test_softmax.py
python_ops/: pytest.ini
python_ops/benchmarks/: bench_elementwise_add.py
python_ops/cutedsl_ops/: __init__.py  elementwise_add.py
python_ops/tests/: conftest.py  test_cute_elementwise.py  test_tilelang_elementwise.py  test_tilelang_mv.py  test_tilelang_onelinesoftmax.py
python_ops/tilelang_ops/: README.md  __init__.py  gemm.py  gemv.py  online_softmax.py  vec_add.py
python_ops/triton_ops/: puzzles_ans.py  vector2d_add.py
test/: test_extension.py
tests/: CMakeLists.txt
tests/include/: common.h
tests/src/: test_attention.cc  test_basic.cc  test_binary.cc  test_cutlass.cc  test_embedding.cc  test_gemm.cc  test_random.cc  test_reduce.cc  test_rms_norm.cc  test_softmax.cc  test_stats.cc  test_unary.cc
tools/: CMakeLists.txt
tools/include/: timer.h  utils.h
tools/src/: device_query.cc  device_query.cu
triton/: elu_kernel.py  note.typ  puzzles.py  vector_add.py
triton/kernels/: elu_kernel.py  softmax_kernel.py
